--- a/testdata/stu3/BUILD
+++ b/testdata/stu3/BUILD
@@ -69,3 +69,10 @@ filegroup(
         "tensorflow/*",
     ]),
 )
+
+filegroup(
+    name = "profilegenerator",
+    srcs = glob([
+        "profilegenerator/*",
+    ]),
+)
