consolidates version flag information into an enum in package_info.
PiperOrigin-RevId: 229942491

--- a/java/BUILD
+++ b/java/BUILD
@@ -139,6 +139,7 @@ java_library(
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
         "//proto/stu3:metadatatypes_java_proto",
+        "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto/stu3:uscore_codes_java_proto",
         "@com_google_protobuf//:protobuf_java",
@@ -421,6 +422,7 @@ java_library(
     name = "profile_generator_lib",
     srcs = ["src/main/java/com/google/fhir/profile/ProfileGenerator.java"],
     deps = [
+        ":fhir_common",
         "//external:gson",
         "//external:guava",
         "//proto/stu3:annotations_java_proto",
