Fixes 2 bugs with CodingWithFixedCode: 1) ProfileGenerator would incorrectly fix url instead of code in profiles for fixed codings. 2) Unprofiler should add CodingWithFixedCode code/value pair to unprofiled codings, even if the field is unset in the profiled Coding.
PiperOrigin-RevId: 236038934

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -339,6 +339,20 @@ cc_library(
     ],
 )
 
+cc_test(
+    name = "codeable_concepts_test",
+    srcs = ["codeable_concepts_test.cc"],
+    data = [
+        "//testdata/stu3/profiles:testdata",
+    ],
+    deps = [
+        ":codeable_concepts",
+        ":test_helper",
+        "//testdata/stu3/profiles:test_cc_proto",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
 cc_library(
     name = "annotations",
     srcs = ["annotations.cc"],
