Makes fhir_profile_base annotation repeated instead of singular, and contain all parent profiles.  This allows us to identify if something is, e.g., a Patient-type resource, even if it is a profile of a profile.
PiperOrigin-RevId: 237525761

--- a/java/BUILD
+++ b/java/BUILD
@@ -205,6 +205,7 @@ java_test(
         "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:resources_java_proto",
+        "//proto/stu3:uscore_java_proto",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
