Uses proto regex annotations to validate primitives in PrimitiveWrapper, rather than hardcoded ones in the individual wrappers.
PiperOrigin-RevId: 238610539

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -265,6 +265,7 @@ cc_library(
     ],
     strip_include_prefix = "//cc/",
     deps = [
+        ":annotations",
         ":codes",
         ":extensions",
         ":util",
