Adds ValidatePrimitive function to primitive_wrapper.h.  This validates that a primitive in proto form is valid.
PiperOrigin-RevId: 239666997

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -268,6 +268,7 @@ cc_library(
         ":annotations",
         ":codes",
         ":extensions",
+        ":proto_util",
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
@@ -313,9 +314,12 @@ cc_test(
         "//testdata/stu3:validation",
     ],
     deps = [
+        ":annotations",
         ":json_format",
         ":test_helper",
+        "//proto/stu3:codes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
+        "//proto/stu3:extensions_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
         "@org_tensorflow//tensorflow/core:test",
