Adds CodeableConcept Utility for copying from one (potentially profiled) codeable concept to another (potentially profiled) codeable concept.
PiperOrigin-RevId: 239896576

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -353,8 +353,10 @@ cc_test(
     deps = [
         ":codeable_concepts",
         ":test_helper",
+        "//cc/google/fhir/testutil:proto_matchers",
         "//testdata/stu3/profiles:test_cc_proto",
         "@com_google_googletest//:gtest_main",
+        "@org_tensorflow//tensorflow/core:test",
     ],
 )
 
