Updates resource_to_example.cc to handle profiled codeable concepts.
PiperOrigin-RevId: 241083298

--- a/cc/google/fhir/seqex/BUILD
+++ b/cc/google/fhir/seqex/BUILD
@@ -128,6 +128,7 @@ cc_library(
         "@com_google_absl//absl/time",
         "//cc/google/fhir/status",
         "//cc/google/fhir/stu3:codeable_concepts",
+        "//cc/google/fhir/stu3:proto_util",
         "//cc/google/fhir/stu3:util",
         "//cc/google/fhir/systems",
         "//proto/stu3:annotations_cc_proto",
