Makes json_parser tolerate single-element arrays as source json for a singular field, as the target field could be a profile that restricts size.
PiperOrigin-RevId: 242769644

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -334,12 +334,14 @@ cc_test(
         "//testdata/stu3:bigquery",
         "//testdata/stu3:examples",
         "//testdata/stu3:ndjson",
+        "//testdata/stu3:profiles",
     ],
     deps = [
         ":json_format",
         ":test_helper",
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/stu3:resources_cc_proto",
+        "//testdata/stu3/profiles:test_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
         "@jsoncpp_git//:jsoncpp",
