--- a/testdata/stu3/profiles/BUILD
+++ b/testdata/stu3/profiles/BUILD
@@ -38,5 +38,8 @@ fhir_proto_library(
 
 filegroup(
     name = "testdata",
-    srcs = glob(["*.prototxt"]),
+    srcs = glob([
+        "*.prototxt",
+        "*.json",
+    ]),
 )
