Adds support for DSTU2 dependencies to ProtoGeneratorMain, and updates DSTU2 generate-proto.sh script to supply the whole DSTU2 spec as dependents. Eliminates the option to specify dependencies by directory, which has been entirely replaced in usage by zips of dependencies.
Regenerates the DSTU2 protos, which picks up a recent change to ReferenceType annotations

PiperOrigin-RevId: 244963283

--- a/java/BUILD
+++ b/java/BUILD
@@ -12,6 +12,7 @@ java_library(
     srcs = glob(["src/main/java/com/google/fhir/stu3/*.java"]),
     deps = [
         ":fhir_common",
+        ":structure_definition_transformer",
         "//external:gson",
         "//external:guava",
         "//proto/stu3:annotations_java_proto",
