moves annotations.proto out of stu3-specific directory. does not yet update package names
PiperOrigin-RevId: 245149380

--- a/cc/google/fhir/seqex/BUILD
+++ b/cc/google/fhir/seqex/BUILD
@@ -16,7 +16,7 @@ cc_library(
         "//cc/google/fhir/stu3:bundle_to_versioned_resources_converter",
         "//cc/google/fhir/stu3:util",
         "//cc/google/fhir/systems",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:codes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
@@ -131,7 +131,7 @@ cc_library(
         "//cc/google/fhir/stu3:proto_util",
         "//cc/google/fhir/stu3:util",
         "//cc/google/fhir/systems",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@org_tensorflow//tensorflow/core:lib",
         "@org_tensorflow//tensorflow/core:protos_all_cc",
