--- a/java/BUILD
+++ b/java/BUILD
@@ -15,7 +15,6 @@ java_library(
         ":structure_definition_transformer",
         "//external:gson",
         "//external:guava",
-        "//proto/stu3:annotations_java_proto",
         "//proto/stu3:codes_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
@@ -23,6 +22,7 @@ java_library(
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto/stu3:uscore_codes_java_proto",
+        "//proto:annotations_java_proto",
         "@com_google_apis_google_api_services_bigquery//jar",
         "@com_google_http_client_google_http_client//jar",
         "@com_google_protobuf//:protobuf_java",
@@ -202,10 +202,10 @@ java_test(
     test_class = "com.google.fhir.stu3.AnnotationUtilsTest",
     deps = [
         ":stu3",
-        "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto/stu3:uscore_java_proto",
+        "//proto:annotations_java_proto",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -347,12 +347,12 @@ java_test(
         ":stu3",
         "//external:gson",
         "//external:guava",
-        "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
         "//proto/stu3:metadatatypes_java_proto",
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
+        "//proto:annotations_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
@@ -376,10 +376,10 @@ java_test(
         ":stu3",
         "//external:gson",
         "//external:guava",
-        "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
+        "//proto:annotations_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
@@ -424,9 +424,9 @@ java_library(
     srcs = ["src/main/java/com/google/fhir/profile/ProfileGenerator.java"],
     deps = [
         ":fhir_common",
+        ":stu3",
         "//external:gson",
         "//external:guava",
-        "//proto/stu3:annotations_java_proto",
         "//proto/stu3:codes_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
@@ -434,7 +434,7 @@ java_library(
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:profiles_java_proto",
         "//proto/stu3:resources_java_proto",
-        "//java:stu3",
+        "//proto:annotations_java_proto",
         "@com_google_protobuf//:protobuf_java",
     ],
 )
@@ -483,10 +483,10 @@ java_library(
         ":fhir_common",
         ":stu3",
         "//external:guava",
-        "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
+        "//proto:annotations_java_proto",
         "@com_google_protobuf//:protobuf_java",
     ],
 )
