--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -12,7 +12,7 @@ cc_library(
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:codes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@org_tensorflow//tensorflow/core:lib",
@@ -44,7 +44,7 @@ cc_library(
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/strings",
         "@org_tensorflow//tensorflow/core:lib",
@@ -83,7 +83,7 @@ cc_library(
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/strings",
         "@org_tensorflow//tensorflow/core:lib",
@@ -125,7 +125,7 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/systems",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
@@ -163,7 +163,7 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/systems",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/strings",
@@ -280,7 +280,7 @@ cc_library(
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
@@ -312,7 +312,7 @@ cc_library(
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
@@ -378,7 +378,7 @@ cc_library(
         ":annotations",
         ":proto_util",
         "//cc/google/fhir/status:statusor",
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/types:optional",
@@ -409,7 +409,7 @@ cc_library(
     hdrs = ["annotations.h"],
     strip_include_prefix = "//cc/",
     deps = [
-        "//proto/stu3:annotations_cc_proto",
+        "//proto:annotations_cc_proto",
         "@protobuf_archive//:protobuf",
     ],
 )
