Java equivalent of https://github.com/google/fhir/commit/e35e9cf2c42013b6ca73fe37b4bad6de69798c20
Tolerate single element JSON arrays parsing into singular proto fields, since profiles can restrict fields to singular without changing the JSON representation.

PiperOrigin-RevId: 248063633

--- a/java/BUILD
+++ b/java/BUILD
@@ -318,6 +318,7 @@ java_test(
         "//spec:stu3",
         "//testdata/stu3:bigquery",
         "//testdata/stu3:examples",
+        "//testdata/stu3:profiles",
     ],
     test_class = "com.google.fhir.stu3.JsonFormatTest",
     deps = [
@@ -325,6 +326,7 @@ java_test(
         "//external:gson",
         "//external:guava",
         "//proto/stu3:resources_java_proto",
+        "//testdata/stu3/profiles:test_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
